--- a/manifest.yaml
+++ b/manifest.yaml
@@ -1,11 +1,10 @@
 id: btcpayserver
 title: BTCPay Server
-version: 2.0.3.1
+version: 2.0.5
 release-notes: |
-  * Updates to the latest upstream [release](https://github.com/btcpayserver/btcpayserver/releases/tag/v2.0.3)
-  * Includes major upstream release of [v2.0.0](https://github.com/btcpayserver/btcpayserver/releases/tag/v2.0.0)! This release introduces many new features and some breaking changes. Please see the [blog post](https://blog.btcpayserver.org/btcpay-server-2-0/) for more details.
-  * Please note: large instances may experience a few minutes of database migration.
-  * Adds optional Monero integration for payment processing
+  * Updates to the latest upstream [release](https://github.com/btcpayserver/btcpayserver/releases/tag/v2.0.5), which includes various bugfixes and improvements
+  * Includes the upstream release of [2.0.4](https://github.com/btcpayserver/btcpayserver/releases/tag/v2.0.4) as well.
+  * Updates NBXplorer to the latest version
 license: mit
 wrapper-repo: "https://github.com/Start9Labs/btcpayserver-wrapper"
 upstream-repo: "https://github.com/btcpayserver/btcpayserver"
