--- a/package.json
+++ b/package.json
@@ -1,19 +1,21 @@
 {
+  "name": "btcpayserver-startos",
   "scripts": {
     "build": "rm -rf ./javascript && ncc build startos/index.ts -o ./javascript",
     "prettier": "prettier --write startos",
     "check": "tsc --noEmit"
   },
   "dependencies": {
-    "@start9labs/start-sdk": "0.3.6-beta.4",
+    "@start9labs/start-sdk": "0.3.6-beta.13",
     "js-yaml": "^4.1.0"
   },
   "devDependencies": {
+    "@types/js-yaml": "^4.0.9",
     "@types/node": "^22.1.0",
     "@vercel/ncc": "^0.38.1",
+    "bitcoind-startos": "git+https://github.com/Start9Labs/bitcoind-startos.git#update/036",
     "prettier": "^3.2.5",
-    "typescript": "^5.4.3",
-    "bitcoind-startos": "git+https://github.com/Start9Labs/bitcoind-startos.git#update/036"
+    "typescript": "^5.4.3"
   },
   "prettier": {
     "trailingComma": "all",
