--- a/manifest.yaml
+++ b/manifest.yaml
@@ -1,11 +1,12 @@
 id: btcpayserver
 title: BTCPay Server
-version: 2.0.6
+version: 2.0.7
 release-notes: |
-  * Updates to the latest upstream [release](https://github.com/btcpayserver/btcpayserver/releases/tag/v2.0.6), which includes a security fix, various bugfixes and several new features.
+  * Updates to the latest upstream [release](https://github.com/btcpayserver/btcpayserver/releases/tag/v2.0.7), which includes a security fix, various bugfixes and several new features.
   * Updates NBXplorer to the latest version
+  * Adds new Shopify plugin functionality (this requires a Tor reverse proxy setup)
 license: mit
-wrapper-repo: "https://github.com/Start9Labs/btcpayserver-wrapper"
+wrapper-repo: "https://github.com/Start9Labs/btcpayserver-startos"
 upstream-repo: "https://github.com/btcpayserver/btcpayserver"
 support-site: "https://docs.btcpayserver.org/Support/"
 marketing-site: "https://btcpayserver.org/"
@@ -66,7 +67,7 @@ config:
     type: script
 dependencies:
   bitcoind:
-    version: ">=0.21.1.2 <29.0.0"
+    version: ">=0.21.1.2 <30.0.0"
     requirement:
       type: "required"
     description: Used for the RPC and P2P connection interfaces.
@@ -76,7 +77,7 @@ dependencies:
       auto-configure:
         type: script
   lnd:
-    version: ">=0.13.3.1 <0.19.0"
+    version: ">=0.13.3.1 <0.20.0"
     requirement:
       type: "opt-in"
       how: Optionally use LND for internal lightning network node implementation.
