--- a/package.json
+++ b/package.json
@@ -6,13 +6,15 @@
     "check": "tsc --noEmit"
   },
   "dependencies": {
-    "@start9labs/start-sdk": "0.4.0-beta.30",
+    "@start9labs/start-sdk": ">=0.4.0-beta.33",
+    "bitcoind-startos": "git+https://github.com/Start9Labs/bitcoind-startos.git#update/040",
     "js-yaml": "^4.1.0",
-    "bitcoind-startos": "git+https://github.com/Start9Labs/bitcoind-startos.git#update/040"
+    "pg": "^8.16.3"
   },
   "devDependencies": {
     "@types/js-yaml": "^4.0.9",
     "@types/node": "^22.1.0",
+    "@types/pg": "^8.15.4",
     "@vercel/ncc": "^0.38.1",
     "prettier": "^3.2.5",
     "typescript": "^5.4.3"
