--- a/.github/workflows/releaseService.yml
+++ b/.github/workflows/releaseService.yml
@@ -1,17 +1,15 @@
-name: Build Service
+name: Release Service
 
 on:
-  workflow_dispatch:
-  pull_request:
-    paths-ignore: ['*.md']
-    branches: ['main', 'master', 'update/040']
   push:
-    paths-ignore: ['*.md']
-    branches: ['main', 'master', 'update/040']
+    tags:
+      - 'v*.*'
 
 jobs:
-  BuildPackage:
+  ReleasePackage:
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
     steps:
       - name: Prepare StartOS SDK
         uses: start9labs/sdk@v2
@@ -23,16 +21,63 @@ jobs:
 
       - name: Build the service package
         id: build
+        env:
+          S9DEVKEY: ${{ secrets.S9DEVKEY }}
         run: |
           start-cli init
+          if [[ -n "$S9DEVKEY" ]]; then
+            echo "Using developer key from secrets to sign the package."
+            printf '%s' "$S9DEVKEY" > ~/.startos/developer.key.pem
+          else
+            echo "Using newly generated developer key to sign the package."
+          fi
           RUST_LOG=debug RUST_BACKTRACE=1 make
-          PACKAGE_ID=$(start-cli s9pk inspect *.s9pk manifest | jq -r '.id')
+          sleep 2
+          MANIFEST_JSON=$(start-cli s9pk inspect *.s9pk manifest)
+          PACKAGE_ID=$(echo "$MANIFEST_JSON" | jq -r '.id')
+          PACKAGE_TITLE=$(echo "$MANIFEST_JSON" | jq -r '.title')
           echo "package_id=${PACKAGE_ID}" >> $GITHUB_ENV
+          echo "package_title=${PACKAGE_TITLE}" >> $GITHUB_ENV
           printf "\n SHA256SUM: $(sha256sum ${PACKAGE_ID}.s9pk) \n"
         shell: bash
 
-      - name: Upload .s9pk
-        uses: actions/upload-artifact@v4
+      - name: Generate sha256 checksum
+        run: |
+          sha256sum ${{ env.package_id }}.s9pk > ${{ env.package_id }}.s9pk.sha256
+        shell: bash
+
+      - name: Generate changelog
+        run: |
+          echo "## What's Changed" > change-log.txt
+          echo "" >> change-log.txt
+          RELEASE_NOTES=$(start-cli s9pk inspect *.s9pk manifest | jq -r '.releaseNotes') 
+          echo "${RELEASE_NOTES}" >> change-log.txt
+          echo "## SHA256 Hash" >> change-log.txt
+          echo '```' >> change-log.txt
+          sha256sum ${{ env.package_id }}.s9pk >> change-log.txt
+          echo '```' >> change-log.txt
+        shell: bash
+
+      - name: Create GitHub Release
+        uses: softprops/action-gh-release@v2
         with:
-          name: ${{ env.package_id }}.s9pk
-          path: ./${{ env.package_id }}.s9pk
+          tag_name: ${{ github.ref_name }}
+          name: ${{ env.package_title }} ${{ github.ref_name }}
+          prerelease: true
+          body_path: change-log.txt
+          files: |
+            ./${{ env.package_id }}.s9pk
+            ./${{ env.package_id }}.s9pk.sha256
+
+      - name: Publish to Registry
+        env:
+          S9DEVKEY: ${{ secrets.S9DEVKEY }}
+          S9REGISTRY: ${{ secrets.S9REGISTRY }}
+        run: |
+          if [[ -z "$S9DEVKEY" || -z "$S9REGISTRY" ]]; then
+          echo "Publish skipped: One or both of S9DEVKEY and S9REGISTRY secrets are not set."
+          else
+          echo "Publishing package to registry..."
+          start-cli --registry https://$S9REGISTRY registry package add ${{ env.package_id }}.s9pk ${{ github.server_url }}/${{ github.repository }}/releases/download/${{ github.ref_name }}/${{ env.package_id }}.s9pk
+          fi
+        shell: bash
