--- a/manifest.yaml
+++ b/manifest.yaml
@@ -1,7 +1,14 @@
 id: btcpayserver
 title: BTCPay Server
-version: 2.0.7.1
-release-notes: Hotfix update for NBXplorer bug
+version: 2.2.1
+release-notes: Bug fixes
+Fix: Updating store settings would silently fail where there was a validation issue @NicolasDorier
+Fix: Ensure unlisted installed plugins appear as updatable (#6896 #6893) @thgO-O
+Fix: Icon spacing issues in multiple UI components (#6886 #6880) @bc1cindy
+Fix: In Wallet Send page, coin selection would unexpectedly also clear labels (#6885 #6883 #6676) @thgO-O
+Fix: Periodic tasks would sometimes stop firing (#6898) @NicolasDorier
+Fix: Date column header isn't aligned properly (#6914) @NicolasDorier
+https://github.com/btcpayserver/btcpayserver/releases/tag/v2.2.1
 license: mit
 wrapper-repo: "https://github.com/Start9Labs/btcpayserver-startos"
 upstream-repo: "https://github.com/btcpayserver/btcpayserver"
