--- a/manifest.yaml
+++ b/manifest.yaml
@@ -1,7 +1,9 @@
 id: btcpayserver
 title: BTCPay Server
-version: 2.0.7.1
-release-notes: Hotfix update for NBXplorer bug
+version: 2.0.7.2
+release-notes: |
+  * Bump max Bitcoin version
+  * Bump max LND version
 license: mit
 wrapper-repo: "https://github.com/Start9Labs/btcpayserver-startos"
 upstream-repo: "https://github.com/btcpayserver/btcpayserver"
@@ -64,7 +66,7 @@ config:
     type: script
 dependencies:
   bitcoind:
-    version: ">=0.21.1.2 <30.0.0"
+    version: ">=0.21.1.2 <32.0.0"
     requirement:
       type: "required"
     description: Used for the RPC and P2P connection interfaces.
@@ -74,7 +76,7 @@ dependencies:
       auto-configure:
         type: script
   lnd:
-    version: ">=0.13.3.1 <0.20.0"
+    version: ">=0.13.3.1 <0.21.0"
     requirement:
       type: "opt-in"
       how: Optionally use LND for internal lightning network node implementation.
