--- a/package.json
+++ b/package.json
@@ -6,15 +6,15 @@
     "check": "tsc --noEmit"
   },
   "dependencies": {
-    "@start9labs/start-sdk": "^0.4.0-beta.45",
-    "bitcoind-startos": "git+https://github.com/Start9Labs/bitcoind-startos.git#update/040",
-    "pg": "^8.16.3"
+    "@start9labs/start-sdk": "^0.4.0-beta.47",
+    "bitcoin-core-startos": "github:Start9Labs/bitcoin-core-startos#update/040",
+    "pg": "^8.17.1"
   },
   "devDependencies": {
-    "@types/node": "^22.19.2",
+    "@types/node": "^22.19.6",
     "@types/pg": "^8.16.0",
-    "@vercel/ncc": "^0.38.1",
-    "prettier": "^3.6.2",
+    "@vercel/ncc": "^0.38.4",
+    "prettier": "^3.8.0",
     "typescript": "^5.9.3"
   },
   "prettier": {
